[gd_scene load_steps=6 format=3 uid="uid://bomy03cstx6ar"]

[ext_resource type="Texture2D" uid="uid://bjme3shsbciou" path="res://asset/icon.svg" id="1_4hqyc"]
[ext_resource type="Script" uid="uid://dulod535fhobe" path="res://tech/mini_card.gd" id="1_sqjnp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sqjnp"]
bg_color = Color(0.21950099, 0.21950105, 0.21950087, 0.48235294)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.08, 0.08, 0.08, 0.74509805)

[sub_resource type="Theme" id="Theme_efxnb"]
Button/styles/hover = SubResource("StyleBoxFlat_sqjnp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqjnp"]
size = Vector2(121, 168)

[node name="Control" type="Control"]
custom_minimum_size = Vector2(114, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 168.0
script = ExtResource("1_sqjnp")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -80.0
offset_right = -3.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="pic" type="TextureRect" parent="Panel/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -40.0
offset_right = -27.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4hqyc")
expand_mode = 1
flip_h = true

[node name="name" type="Label" parent="Panel/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 20.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.11119685, 0.11119684, 0.11119684, 1)
text = "the Card"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0.105882354)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_efxnb")
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="Button"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2(60.5, 85)
shape = SubResource("RectangleShape2D_sqjnp")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
